css(RewardCard): prevent too large images

--- a/src/components/RewardCard/RewardCard.module.scss
+++ b/src/components/RewardCard/RewardCard.module.scss
@@ -13,6 +13,7 @@
 
   .image {
     background-color: var(--backgroundSecondary);
+    max-width: 150px;
     padding: 0.5rem;
   }
 }
